# uringpp

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml
cmake/: FindLibUring.cmake
examples/: helloworld.cc
include/uringpp/: awaitable.h  dir.h  error.h  event_loop.h  file.h  ip_address.h  listener.h  pipe.h  socket.h  task.h  tcp_listener.h  uringpp.h
include/uringpp/detail/: debug.h  noncopyable.h  serdes.h
include/uringpp/socket/: channel.h  event_loop.h  tcp_connection.h  tcp_listener.h
src/: event_loop.cc  socket.cc
src/socket/: channel.cc  event_loop.cc  tcp_connection.cc  tcp_listener.cc
